Fix test infrastructure and enhance defensive programming
Major improvements to test suite stability:
- Fix Jest ESM transform issues with wagmi/viem modules
- Add defensive programming patterns to prevent undefined value errors
- Enhance useContractConstants hook with proper BigInt fallbacks
- Add missing data-testid attributes for UI testing
- Update integration tests with correct button text expectations
- Create comprehensive E2E test for wallet-to-main user flow
- Implement safety checks in modal components

Test infrastructure changes:
- Add wagmi/connectors to Jest moduleNameMapper
- Include @coinbase in transformIgnorePatterns
- Fix UserNameInput component with defensive destructuring
- Update GiveKindnessModal with undefined value guards
- Add missing pool-dashboard testid attribute

Also update .gitignore to exclude media files and test artifacts from future commits.

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,25 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Test artifacts and temporary files
+/test-results/
+/playwright-report/
+/coverage/
+*.log
+frontend-dev.log
+
+# Media files (videos, images, screenshots)
+*.mp4
+*.avi
+*.mov
+*.webm
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.svg
+*.webp
+**/screenshots/
+**/videos/
+**/test-results/
